Annotation tool: Tool Settings aren't displayed in header until mouse over #70815

Closed
opened 2019-10-14 17:25:37 +02:00 by Stanislav Blinov · 8 comments

Blender Version
Broken: blender-2.81-95f020c853d6
Broken: blender-2.82-bde328352be2

Short description of error
When creating a new drawing with the Annotate tool, the settings don't appear in viewport header until one moves mouse over it.

Exact steps for others to reproduce the error

  1. Create a new scene.
  2. Make sure that Tool Settings is enabled for the 3D Viewport header.
  3. Select the Annotate Tool.
  4. Make a stroke.
  5. Note that annotation color/layer selection did not appear in the header.
  6. Move mouse over header.
  7. Annotation color/layer selection will appear in the header.
**Blender Version** Broken: blender-2.81-95f020c853d6 Broken: blender-2.82-bde328352be2 **Short description of error** When creating a new drawing with the Annotate tool, the settings don't appear in viewport header until one moves mouse over it. **Exact steps for others to reproduce the error** 1. Create a new scene. 2. Make sure that Tool Settings is enabled for the 3D Viewport header. 2. Select the Annotate Tool. 3. Make a stroke. 4. Note that annotation color/layer selection did not appear in the header. 5. Move mouse over header. 6. Annotation color/layer selection will appear in the header.

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes
Member

Added subscriber: @Mets

Added subscriber: @Mets

Added subscriber: @jfmatheu

Added subscriber: @jfmatheu

I can confirm this, also adding to this issue same happens to me when making addons that for example use brush data, If I change some setting over other area (properties, headers, toolbar...) Panels don't update and you have to mouse over the panel to force an update, that's an issue from so much time ago and hope devs can dig into it soon...

I can confirm this, **also adding to this issue** same happens to me when making addons that for example use brush data, If I change some setting over other area (properties, headers, toolbar...) Panels don't update and you have to mouse over the panel to force an update, that's an issue from so much time ago and hope devs can dig into it soon...

Added subscribers: @JulianEisel, @mano-wii

Added subscribers: @JulianEisel, @mano-wii
Julian Eisel was assigned by Germano Cavalcante 2019-10-15 14:38:40 +02:00

I can confirm.
A notifier must be missing at the end of the operator.
No need to create another scene, just select the Annotate tool, make a stroke and note that the tool bar has not been updated.
@JulianEisel, you are one of those who take care of Tools & Operators according to https://wiki.blender.org/wiki/Modules.

I can confirm. A notifier must be missing at the end of the operator. No need to create another scene, just select the Annotate tool, make a stroke and note that the tool bar has not been updated. @JulianEisel, you are one of those who take care of `Tools & Operators` according to https://wiki.blender.org/wiki/Modules.

This issue was referenced by 4d3a317258

This issue was referenced by 4d3a3172582dea2d3dfe122e05b38640fed441b6
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70815
No description provided.