Fix T70815: Missing tool settings redraw when using Annotate Tool